# tempora

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE.md  README.md  docker-compose.yml  masterplan_tempora.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark_smoke.yaml  contractive_ctrnn.yaml  synth_circle.yaml  synth_lorenz.yaml  synth_rossler.yaml  synth_torus.yaml
docs/: mvp_spec.md  release_v0_1.md  research_stack.md
docs/experiments/: baseline_comparison_protocol.md  benchmark_spec.md  metrics_schema.md  plasticity_smoke_protocol.md  results_template.md  stability_invariance_protocol.md  synthetic_protocol.md
docs/theory/: assumptions.md  theorem_01_contraction.md  theorem_02_learning_stability.md  theorem_03_tda_preservation.md
requirements/: base.txt  dev.txt  docker-cpu.txt  research.txt
scripts/: check_certificates.py  eval_synth.py  make_report.py  release_smoke.py  train_synth.py  validate_metrics.py
tests/: test_baselines.py  test_check_certificates.py  test_checkpoints.py  test_ci_workflow.py  test_circle.py  test_contractive_ctrnn.py  test_docs_links.py  test_end_to_end_synth.py  test_example_configs.py  test_learning_stability_certificates.py  test_lorenz.py  test_lyapunov.py  test_metrics_schema_docs.py  test_plasticity.py  test_projection.py  test_proof_certificates.py  test_release_docs.py  test_release_smoke.py  test_rossler.py  test_run_synthetic.py  test_smoke.py  test_tda_metrics.py  test_theory_docs.py  test_time_warp.py  test_topology_certificates.py  test_torus.py  test_validate_metrics.py
(+44 files in other folders)
