[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempora"
version = "0.0.0"
description = "Proof-guided temporal self-organization in continuous-time neural systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [
  { name = "TEMPORA Contributors" },
]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0.12,<7",
]
research = [
  "matplotlib>=3.8,<4",
  "persim>=0.3,<0.4",
  "ripser>=0.6,<0.7",
  "sympy>=1.12,<2",
  "torch>=2.3,<3",
  "torchdiffeq>=0.2.4,<0.3",
  "z3-solver>=4.12,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "persim.*",
  "ripser.*",
  "scipy.*",
  "sklearn.*",
  "torch.*",
  "torchdiffeq.*",
  "yaml.*",
  "z3.*",
]
ignore_missing_imports = true
